Migrate to latest FHIR engine SDK (#2718)
* Upgrade dependencies

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Fix app crash

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Upgrade more gradle dependencies

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Upgrade test dependencies

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Delete unused class

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Refactor repositories to use new Search API SearchResult

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Refactor code with latest SDK changes

- Update sync and other code implementations using FhirEngine
Search API

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Fix failing tests

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Fix focus requester on PinCell UI

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Refactor geowidget and engine tests

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Refactor quest module tests

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Fix failing tests for engine module

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Delete duplicated test classes

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Fix package name on CI script

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Resolve failing tests in quest module

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Refactor QuestionnaireResponse/Questionnaire validation implementation

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Format code

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Replace the resource.db file in assets

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Cleanup unused code

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Replace resources.zip file

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.

--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -20,12 +20,12 @@ cql-engine = "2.4.0"
 cql-evaluator = "2.4.0"
 cql-to-elm = "2.4.0"
 dagger-hilt-compiler = "2.45"
-data-capture = "1.0.0-preview14.5-SNAPSHOT"
+data-capture = "1.0.0-preview15-SNAPSHOT"
 desugar-jdk-libs = "1.1.5"
 easy-rules-jexl = "4.1.0"
 espresso-core = "3.5.1"
 fhir-common-utils = "0.0.10-SNAPSHOT"
-fhir-engine = "0.1.0-beta03-preview9.5-SNAPSHOT"
+fhir-engine = "0.1.0-beta03-preview10-SNAPSHOT"
 foundation = "1.3.1"
 fragment-ktx = "1.6.1"
 fragment-testing = "1.6.1"
