Added Stock Inventory

--- a/android/quest/src/mpower-mcgovern/assets/configs/app/navigation_config.json
+++ b/android/quest/src/mpower-mcgovern/assets/configs/app/navigation_config.json
@@ -250,6 +250,27 @@
   },
   "staticMenu": [
     {
+      "id": "inventoryRegister",
+      "display": "Stock Inventory",
+      "icon": "",
+      "menuIconConfig": {
+        "type": "local",
+        "reference": "ic_inventory"
+      },
+      "showCount": true,
+      "actions": [
+        {
+          "trigger": "ON_CLICK",
+          "workflow": "LAUNCH_REGISTER",
+          "id": "inventoryRegister"
+        },
+        {
+          "trigger": "ON_COUNT",
+          "id": "inventoryRegister"
+        }
+      ]
+    },
+    {
       "id": "dashboardReports",
       "visible": true,
       "display": "Dashboard Reports",
