--- a/android/quest/src/mpower-mcgovern/assets/configs/app/registers/inventory_register_config.json
+++ b/android/quest/src/mpower-mcgovern/assets/configs/app/registers/inventory_register_config.json
@@ -193,6 +193,7 @@
         "children": [
           {
             "viewType": "SERVICE_CARD",
+            "clickable": false,
             "details": [
               {
                 "viewType": "COMPOUND_TEXT",
@@ -222,72 +223,8 @@
               "text": "@{runningBalance}",
               "status": "DUE",
               "fontSize": 14.0,
-              "smallSized": false,
-              "actions": [
-                {
-                  "trigger": "ON_CLICK",
-                  "workflow": "LAUNCH_QUESTIONNAIRE",
-                  "questionnaire": {
-                    "id": "a3b8260b-d474-42ef-9ab2-a7794a0a27bc",
-                    "title": "@{commodityName}",
-                    "saveButtonText": "ADJUST STOCK LEVELS",
-                    "setPractitionerDetails": true,
-                    "setOrganizationDetails": true,
-                    "resourceIdentifier": "@{commodityId}"
-                  },
-                  "params": [
-                    {
-                      "paramType": "PREPOPULATE",
-                      "linkId": "650dd00d-c60b-4a3d-838a-128aad04827f",
-                      "dataType": "STRING",
-                      "key": "commodityName",
-                      "value": "@{commodityName}"
-                    },
-                    {
-                      "paramType": "PREPOPULATE",
-                      "linkId": "d2cda03f-dc14-4f15-85ab-d5c33027aa31",
-                      "dataType": "INTEGER",
-                      "key": "currentBalance",
-                      "value": "@{runningBalance}"
-                    },
-                    {
-                      "paramType": "PREPOPULATE",
-                      "linkId": "d6c39388-fb56-4e1f-8cfc-f199f2c89919",
-                      "dataType": "STRING",
-                      "key": "latestObservationId",
-                      "value": "@{latestObservationId}"
-                    },
-                    {
-                      "paramType": "PREPOPULATE",
-                      "linkId": "513d5111-449e-49e0-d43a-8953fb53ba7d",
-                      "dataType": "STRING",
-                      "key": "stockoutFlagId",
-                      "value": "@{stockoutFlagId}"
-                    },
-                    {
-                      "paramType": "PREPOPULATE",
-                      "linkId": "6c5c6fd7-749c-402b-990b-df96a92bf6c8",
-                      "dataType": "STRING",
-                      "key": "stockoutStartDate",
-                      "value": "@{stockoutStartDate}"
-                    }
-                  ]
-                }
-              ]
-            },
-            "actions": [
-              {
-                "trigger": "ON_CLICK",
-                "workflow": "LAUNCH_PROFILE",
-                "id": "inventoryProfile",
-                "params": [
-                  {
-                    "key": "commodityId",
-                    "value": "@{commodityId}"
-                  }
-                ]
-              }
-            ]
+              "smallSized": false
+            }
           }
         ]
       }
