--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -71,7 +71,7 @@ navigation-ui-ktx = "2.5.3"
 okhttp = "4.10.0"
 okhttp-logging-interceptor = "4.10.0"
 orchestrator = "1.4.2"
-p2p-lib = "0.6.6-SNAPSHOT"
+p2p-lib = "0.6.8-composition-1.2.1-SNAPSHOT"
 paging-compose = "1.0.0-alpha17"
 paging-runtime-ktx = "3.1.1"
 preference-ktx = "1.2.0"
