Protect PreviewActivity from being shared with other apps (#2786)
* Protect PreviewActivity from being shared with other apps

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Disable cloud backups

Cloud backups are stored in user's Google Drive so that it can be restored
on the user's same/new device. This would interfere with the privacy of
Health data. What this means is the user would still have access to the
data even when they nolonger work for the same health facility and the
information will be stored in users Google account.

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

---------

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/AndroidManifest.xml
+++ b/android/quest/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <application
         android:name=".QuestApplication"
+        android:allowBackup="true"
         android:enableOnBackInvokedCallback="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
@@ -60,6 +61,13 @@
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
+
+        <activity
+            android:name="androidx.compose.ui.tooling.PreviewActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            tools:replace="exported" />
 
         <service
             android:name=".ui.login.AuthAndroidService"
