Add loginViewModel tests on multi-user with 'location' syncStrategy

--- a/android/quest/src/main/assets/configs/app/application_config.json
+++ b/android/quest/src/main/assets/configs/app/application_config.json
@@ -14,10 +14,7 @@
   "useDarkTheme": false,
   "syncInterval": 30,
   "syncStrategy": [
-    "Location",
-    "Organization",
-    "CareTeam",
-    "Practitioner"
+    "Location"
   ],
   "loginConfig": {
     "showLogo": true,
