--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ desugar-jdk-libs = "1.1.5"
 easy-rules-jexl = "4.1.0"
 espresso-core = "3.5.1"
 fhir-common-utils = "0.0.10-SNAPSHOT"
-fhir-engine = "0.1.0-beta04-preview4-SNAPSHOT"
+fhir-engine = "0.1.0-beta04-preview4.1-SNAPSHOT"
 foundation = "1.3.1"
 fragment-ktx = "1.6.1"
 fragment-testing = "1.6.1"
