--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -16,16 +16,16 @@ converter-gson = "2.9.0"
 core-ktx = "1.10.1"
 core-ktx-test= "1.5.0"
 core-testing = "2.2.0"
-cql-engine = "2.4.0"
-cql-evaluator = "2.4.0"
-cql-to-elm = "2.4.0"
+cql-engine = "3.2.0"
+cql-evaluator = "2.6.0"
+cql-evaluator-another = "2.4.0"
 dagger-hilt-compiler = "2.45"
-data-capture = "1.0.0-preview19-SNAPSHOT"
-desugar-jdk-libs = "1.1.5"
+data-capture = "1.0.0-preview20-SNAPSHOT"
+desugar-jdk-libs = "2.0.3"
 easy-rules-jexl = "4.1.0"
 espresso-core = "3.5.1"
 fhir-common-utils = "0.0.10-SNAPSHOT"
-fhir-engine = "0.1.0-beta04-preview4-SNAPSHOT"
+fhir-engine = "0.1.0-beta04-preview5-SNAPSHOT"
 foundation = "1.3.1"
 fragment-ktx = "1.6.1"
 fragment-testing = "1.6.1"
@@ -45,7 +45,7 @@ junit-jupiter-api = "5.8.2"
 junit-jupiter-engine = "5.8.2"
 junit-ktx = "1.1.5"
 junit-vintage-engine = "5.8.2"
-knowledger = "0.1.0-alpha001-preview-SNAPSHOT"
+knowledger = "0.1.0-alpha02-preview-SNAPSHOT"
 kotlin = "1.8.10"
 kotlinx-coroutines-android = "1.6.4"
 kotlinx-coroutines-core = "1.6.2"
@@ -96,7 +96,7 @@ ui-test-manifest = "1.4.3"
 ui-tooling = "1.4.3"
 work-runtime-ktx = "2.8.1"
 work-testing = "2.8.1"
-workflow = "0.1.0-alpha02-preview9.1-SNAPSHOT"
+workflow = "0.1.0-alpha03-preview3-SNAPSHOT"
 xercesImpl = "2.12.2"
 
 [libraries]
@@ -118,14 +118,13 @@ core-desugar = { group = "com.android.tools", name = "desugar_jdk_libs", version
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 core-ktx-test = { group = "androidx.test", name = "core-ktx", version.ref = "core-ktx-test" }
 core-testing = { group = "androidx.arch.core", name = "core-testing", version.ref = "core-testing" }
-cqf-cql-engine = { group = "org.opencds.cqf.cql", name = "engine", version.ref = "cql-engine" }
+cqf-cql-engine = { group = "info.cqframework", name = "cql", version.ref = "cql-engine" }
+cql-to-elm = { group = "info.cqframework", name = "cql-to-elm", version.ref = "cql-engine" }
 cqf-cql-evaluator = { group = "org.opencds.cqf.cql", name = "evaluator", version.ref = "cql-evaluator" }
-cql-engine-jackson = { group = "org.opencds.cqf.cql", name = "engine.jackson", version.ref = "cql-engine" }
 cql-evaluator-builder = { group = "org.opencds.cqf.cql", name = "evaluator.builder", version.ref = "cql-evaluator" }
 cql-evaluator-dagger = { group = "org.opencds.cqf.cql", name = "evaluator.dagger", version.ref = "cql-evaluator" }
 cql-evaluator-plandefinition = { group = "org.opencds.cqf.cql", name = "evaluator.plandefinition", version.ref = "cql-evaluator" }
-cql-measure-evaluator = { group = "org.opencds.cqf.cql", name = "evaluator.measure", version.ref = "cql-evaluator" }
-cql-to-elm = { group = "info.cqframework", name = "cql-to-elm", version.ref = "cql-to-elm" }
+cql-measure-evaluator = { group = "org.opencds.cqf.cql", name = "evaluator.measure", version.ref = "cql-evaluator-another" }
 dagger-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-android" }
 dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "dagger-hilt-compiler" }
 data-capture = { group = "org.smartregister", name = "data-capture", version.ref = "data-capture" }
@@ -151,7 +150,7 @@ junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", v
 junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit-jupiter-engine" }
 junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junit-ktx" }
 junit-vintage-engine = { group = "org.junit.vintage", name = "junit-vintage-engine", version.ref = "junit-vintage-engine" }
-knowledger = { module = "org.smartregister:knowledger", version.ref = "knowledger" }
+knowledger = { module = "org.smartregister:knowledge", version.ref = "knowledger" }
 kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "kotlin" }
 kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin" }
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinx-coroutines-android" }
