Fix failures in tests in p2p.dao package

--- a/android/engine/src/main/assets/configs/default/config_application.json
+++ b/android/engine/src/main/assets/configs/default/config_application.json
@@ -6,6 +6,19 @@
     "en",
     "sw"
   ],
+  "deviceToDeviceSync": {
+    "resourcesToSync": [
+      "Group",
+      "Patient",
+      "CarePlan",
+      "Task",
+      "Encounter",
+      "Observation",
+      "Condition",
+      "Questionnaire",
+      "QuestionnaireResponse"
+    ]
+  },
   "applicationName": "Sample App",
   "appLogoIconResourceFile": "ic_launcher",
   "count": "100",
