--- a/android/quest/src/mpower-mcgovern/assets/configs/app/application_config.json
+++ b/android/quest/src/mpower-mcgovern/assets/configs/app/application_config.json
@@ -36,5 +36,11 @@
       "List",
       "Flag"
     ]
-  }
+  },
+  "requiredPermissions": [
+    {
+      "name": "android.permission.POST_NOTIFICATIONS",
+      "minSdkInt": 33
+    }
+  ]
 }
