Store Notification as FHIR Resource (MessageDefinition) and Show

--- a/android/quest/src/mpower-mcgovern/assets/configs/app/registers/household_register_config.json
+++ b/android/quest/src/mpower-mcgovern/assets/configs/app/registers/household_register_config.json
@@ -288,5 +288,12 @@
         }
       ]
     }
+  ],
+  "registerNotification": [
+    {
+      "trigger": "ON_CLICK",
+      "workflow": "LAUNCH_NOTIFICATIONS",
+      "id": "notification"
+    }
   ]
 }
