Add DeviceToDeviceSync app feature in sample configs

--- a/android/quest/src/main/assets/configs/quest/config_app_feature.json
+++ b/android/quest/src/main/assets/configs/quest/config_app_feature.json
@@ -11,6 +11,11 @@
       "useCases": [
         "PATIENT_REGISTRATION"
       ]
+    },
+    {
+      "feature": "DeviceToDeviceSync",
+      "settings": {},
+      "active": true
     }
   ]
 }
