--- a/android/engine/src/main/assets/configs/default/config_app_feature.json
+++ b/android/engine/src/main/assets/configs/default/config_app_feature.json
@@ -37,6 +37,11 @@
         "HOUSEHOLD_VISITS",
         "REMOVE_HOUSEHOLD_MEMBER"
       ]
+    },
+    {
+      "feature": "DeviceToDeviceSync",
+      "settings": {},
+      "active": true
     }
   ]
 }
